WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145037
Have DOMWindow::createWindow() take references to frames
https://bugs.webkit.org/show_bug.cgi?id=145037
Summary
Have DOMWindow::createWindow() take references to frames
Chris Dumez
Reported
2015-05-14 20:47:02 PDT
Have DOMWindow::createWindow() take references to frames instead of pointers as they are expected to be non-null. Also return a RefPtr instead of a PassRefPtr.
Attachments
Patch
(10.12 KB, patch)
2015-05-14 20:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-05-14 20:49:09 PDT
Created
attachment 253173
[details]
Patch
WebKit Commit Bot
Comment 2
2015-05-14 20:50:50 PDT
Attachment 253173
[details]
did not pass style-queue: ERROR: Source/WebCore/page/DOMWindow.h:356: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/page/DOMWindow.cpp:2075: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gyuyoung Kim
Comment 3
2015-05-14 21:17:19 PDT
Comment on
attachment 253173
[details]
Patch LGTM.
WebKit Commit Bot
Comment 4
2015-05-14 22:08:53 PDT
Comment on
attachment 253173
[details]
Patch Clearing flags on attachment: 253173 Committed
r184372
: <
http://trac.webkit.org/changeset/184372
>
WebKit Commit Bot
Comment 5
2015-05-14 22:08:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug